# bar-by-bar

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
docs/: make_demo.py
src/bar_by_bar/: __init__.py  __main__.py  agent.py  cli.py  data.py  engine.py  guard.py  metrics.py  report.py  synthetic.py
tests/unit/: conftest.py  test_agent.py  test_data.py  test_engine.py  test_guard.py  test_metrics.py  test_report_cli.py
