[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bar-by-bar"
version = "0.1.0"
description = "Framework-agnostic agentic backtesting harness with a hard look-ahead guard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Viprasol Tech Private Limited", email = "support@viprasol.com" }]
keywords = [
    "backtesting",
    "trading",
    "agents",
    "llm-agents",
    "look-ahead-bias",
    "point-in-time",
    "quant",
    "crewai",
    "langgraph",
    "autogen",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<0.16",
    "mypy>=1.10",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/Viprasol-Tech/bar-by-bar"
Repository = "https://github.com/Viprasol-Tech/bar-by-bar"
Issues = "https://github.com/Viprasol-Tech/bar-by-bar/issues"
Website = "https://viprasol.com"

[project.scripts]
bar-by-bar = "bar_by_bar.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bar_by_bar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["B008", "B027", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
